Indentified typo in target version in pom.xml & refactored a method to use 1.8 available methods for travis compatibility.